--- a/src/components/onscreen-keyboard/onscreen-keyboard-component.style.css
+++ b/src/components/onscreen-keyboard/onscreen-keyboard-component.style.css
@@ -72,10 +72,10 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,  rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 .onscreen-keyboard-key:hover {
-  background-color: rgba(0, 149, 255, 0.75);
+  /* background-color: rgba(0, 149, 255, 0.75); */
   cursor: pointer;
-  box-shadow: none;
-  border: 1px solid rgb(150, 150, 150);
+  /* box-shadow: none; */
+  border: 1px solid rgb(62, 62, 255);
 }
 .onscreen-keyboard-key-pressed {
   cursor: pointer;
@@ -108,6 +108,7 @@
 }
 
 .onscreen-keyboard-key-spacer {
+  pointer-events: none;
   display: inline-block; 
   position: relative; 
   top: 3.5%;
