--- a/src/components/onscreen-keyboard/onscreen-keyboard-component.style.css
+++ b/src/components/onscreen-keyboard/onscreen-keyboard-component.style.css
@@ -13,9 +13,9 @@
   background-color: rgb(178, 193, 211);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: small;
+  font-size: medium;
   color: rgb(146, 150, 154);
-  /* opacity: 0.65; */
+  /* opacity: 0.5; */
 }
 .onscreen-keyboard-col {
   display: inline-block;
@@ -75,12 +75,21 @@
   /* background-color: rgba(0, 149, 255, 0.75); */
   cursor: pointer;
   /* box-shadow: none; */
-  border: 1px solid rgb(62, 62, 255);
+  /* border: 1px solid rgb(62, 62, 255); */
 }
 .onscreen-keyboard-key-pressed {
   cursor: pointer;
   box-shadow: none;
   border: 1px solid rgb(150, 150, 150);
+}
+.onscreen-keyboard-key-disabled {
+  box-shadow: none;
+  border: 1px dashed lightgray;
+  background-color: rgb(222, 222, 222);
+  color:rgba(255, 255, 255, 0.33)
+}
+.onscreen-keyboard-key-disabled:hover {
+  cursor: not-allowed;
 }
 .onscreen-keyboard-key-content-centered {
   position: absolute;
